@@ -49,6 +49,27 @@ public class SearchHandlerTest extends AbstractSolrTestCase
     assertEquals( 1, handler.getComponents().size() );
     assertEquals( core.getSearchComponent( MoreLikeThisComponent.COMPONENT_NAME ), 
         handler.getComponents().get( 0 ) );
+
+    // Build an explicit list that includes the debug comp.
+    //-----------------------------------------------
+    names0 = new ArrayList<String>();
+    names0.add( FacetComponent.COMPONENT_NAME );
+    names0.add( DebugComponent.COMPONENT_NAME );
+    names0.add( MoreLikeThisComponent.COMPONENT_NAME );
+
+    args = new NamedList();
+    args.add( SearchHandler.INIT_COMPONENTS, names0 );
+    handler = new SearchHandler();
+    handler.init( args );
+    handler.inform( core );
+
+    assertEquals( 3, handler.getComponents().size() );
+    assertEquals( core.getSearchComponent( FacetComponent.COMPONENT_NAME ),
+        handler.getComponents().get( 0 ) );
+    assertEquals( core.getSearchComponent( DebugComponent.COMPONENT_NAME ),
+        handler.getComponents().get( 1 ) );
+    assertEquals( core.getSearchComponent( MoreLikeThisComponent.COMPONENT_NAME ), 
+        handler.getComponents().get( 2 ) );
     
 
     // First/Last list
@@ -69,6 +90,8 @@ public class SearchHandlerTest extends AbstractSolrTestCase
     List<SearchComponent> comps = handler.getComponents();
     assertEquals( 2+handler.getDefaultComponents().size(), comps.size() );
     assertEquals( core.getSearchComponent( MoreLikeThisComponent.COMPONENT_NAME ), comps.get( 0 ) );
-    assertEquals( core.getSearchComponent( FacetComponent.COMPONENT_NAME ), comps.get( comps.size()-1 ) );
+    assertEquals( core.getSearchComponent( FacetComponent.COMPONENT_NAME ), comps.get( comps.size()-2 ) );
+    //Debug component is always last in this case
+    assertEquals( core.getSearchComponent( DebugComponent.COMPONENT_NAME ), comps.get( comps.size()-1 ) );
   }
 }
